правки в ответах у регистрации + докс
