# service-anime/docs/swagger.yaml
@@ -1,5 +1,53 @@
 basePath: /
 definitions:
+  handlers.AnimeParams:
+    properties:
+      actors:
+        type: string
+      annotation:
+        type: string
+      countries:
+        type: string
+      description:
+        type: string
+      directors:
+        type: string
+      genres:
+        type: string
+      kinopoisk_id:
+        type: string
+      posters:
+        type: string
+      status:
+        type: string
+      studios:
+        type: string
+      title:
+        type: string
+      title_en:
+        type: string
+      title_or:
+        type: string
+      translators:
+        type: string
+      type:
+        type: string
+      world_art_id:
+        type: string
+      year:
+        type: string
+    required:
+    - annotation
+    - description
+    - genres
+    - posters
+    - status
+    - title
+    - title_en
+    - title_or
+    - type
+    - year
+    type: object
   handlers.CreateResponse:
     properties:
       anime:
@@ -52,45 +100,8 @@ definitions:
   handlers.UpdateRequest:
     properties:
       anime:
-        $ref: '#/definitions/handlers.anime'
+        $ref: '#/definitions/handlers.AnimeParams'
         type: object
-    type: object
-  handlers.anime:
-    properties:
-      actors:
-        type: string
-      annotation:
-        type: string
-      countries:
-        type: string
-      description:
-        type: string
-      directors:
-        type: string
-      genres:
-        type: string
-      kinopoisk_id:
-        type: string
-      posters:
-        type: string
-      status:
-        type: string
-      studios:
-        type: string
-      title:
-        type: string
-      title_en:
-        type: string
-      title_or:
-        type: string
-      translators:
-        type: string
-      type:
-        type: string
-      world_art_id:
-        type: string
-      year:
-        type: string
     type: object
   handlers.health:
     properties:
@@ -157,7 +168,7 @@ paths:
         name: anime
         required: true
         schema:
-          $ref: '#/definitions/handlers.anime'
+          $ref: '#/definitions/handlers.AnimeParams'
           type: object
       - description: service version
         in: query
